[package]
name = "mayda"
version = "0.2.3"
authors = ["Jeremy Mason <jkylemason@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Compression of integer arrays, favoring decompression speed."
homepage = "https://github.com/harharkh/mayda"
repository = "https://github.com/harharkh/mayda"
documentation = "https://harharkh.github.io/mayda"
readme = "README.md"
keywords = ["mayda", "compression"]

[lib]
name = "mayda"

[dependencies]
mayda_codec = { path = "mayda_codec", version = "0.1" }

[dev-dependencies]
num = "0.1"
quickcheck = "0.4"
quickcheck_macros = "0.4"
rand = "0.3"
