[package]
name = "mayda_macros"
version = "0.1.2"
authors = ["Jeremy Mason <jkylemason@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Macros to generate basic encoding and decoding functions used by mayda"
homepage = "https://github.com/harharkh/mayda"
repository = "https://github.com/harharkh/mayda"
documentation = "https://harharkh.github.io/mayda"
keywords = ["mayda", "compression"]

[lib]
name = "mayda_macros"
plugin = true
