[package]
name = "mayda_macros"
version = "0.1.3"
authors = ["Jeremy Mason <jkylemason@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Macros to generate basic encoding and decoding functions used by mayda"
homepage = "https://github.com/harharkh/mayda"
repository = "https://github.com/harharkh/mayda"
documentation = "https://harharkh.github.io/mayda"
keywords = ["mayda", "compression"]

[lib]
name = "mayda_macros"
plugin = true

# UNCOMMENT THESE DEPS FOR DEV
# trick helping with dev-time exploration of rust internals
# from https://maikklein.github.io/post/rust-compiler/
#
# but sobmodules make a grown man cry!
# just clone the rust sources yourself to the .gitignored "compiler" subfolder
# ```
# git clone git@github.com:rust-lang/rust.git compiler"
# ```
# and checkout the rust revision at the time that most closely matches the one in rust-toolchain file
# ```
# cat rust-toolchain
#     >> "nightly-2017-06-13"
# cd compiler
# git checkout 'master@{2017-06-13 03:00:00}
# ```
#[target.'cfg(IGNORE_DEV_SOURCE_PATH_ONLY)'.dependencies]
#rustc = {path = "../compiler/src/librustc/"}
#rustc_plugin = {path = "../compiler/src/librustc_plugin/"}
#syntax = {path = "../compiler/src/libsyntax/"}
#syntax_pos = {path = "../compiler/src/libsyntax_pos/"}
